--- a/Website/SignIn.html
+++ b/Website/SignIn.html
@@ -30,7 +30,7 @@
                     </div>
  
  
-                    <p class="signinBtn">Lost Password <a href="#">Click Here!</a></p>
+                    <p class="signinBtn">Lost Password <a href="LostPassword.html">Click Here!</a></p>
                 </div>
                 <div class="btn-field">
                     <button type="button" id="signupBtn">Sign up</button>
@@ -39,25 +39,6 @@
             </from>
         </div>
     </div>
-    <script>
-        let signupBtn = document.getElementById("signupBtn");
-        let signinBtn = document.getElementById("signinBtn");
-        let nameField = document.getElementById("nameField");
-        let title = document.getElementById("title");
- 
-        signinBtn.onclick = function() {
-            nameField.style.maxHeight = "0";
-            title.innerHTML = "Sign In";
-            signupBtn.classList.add("disable");
-            signinBtn.classList.remove("disable");
-        }
- 
-        signupBtn.onclick = function() {
-            nameField.style.maxHeight = "60px";
-            title.innerHTML = "Sign Up";
-            signupBtn.classList.remove("disable");
-            signinBtn.classList.add("disable");
-        }
-    </script>
+    <script src="Style/SignIn.js"></script>
 </body>
 </html>
