--- a/Website/LostPassword.html
+++ b/Website/LostPassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost Password</title>
-    <link rel="stylesheet" href="Style/SignIn.css">
+    <link rel="stylesheet" href="SignIn.css">
     <script src="https://kit.fontawesome.com/9a9e1647c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
