--- a/Website/Download.html
+++ b/Website/Download.html
@@ -87,9 +87,9 @@ digital world.</p>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" href="Home.html" style="padding: 12px 4px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" href="About.html" style="padding: 12px 4px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" style="padding: 12px 4px;">Convert Crypto</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" href="CryptoExchange.html" style="padding: 12px 4px;">Convert Crypto</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" href="Download.html" style="padding: 12px 4px;">Download</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" style="padding: 12px 4px;">Sign Up</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-grey-50" href="SignIn.html" style="padding: 12px 4px;">Sign Up</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -98,9 +98,9 @@ digital world.</p>
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Convert Crypto</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="CryptoExchange.html">Convert Crypto</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Download.html">Download</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Sign Up</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="SignIn.html">Sign Up</a>
 </li></ul>
               </div>
             </div>
